--- a/views/index.jade
+++ b/views/index.jade
@@ -1,6 +1,7 @@
 extends layout
 
 block content
-  h3 Welcome to roots!
+  h3 Welcome from Min Khant Kyaw's World!
   :markdown
-    Find tutorials and documentation at http://roots.cx : )
+    I will be update soon. 
+    Thanks ......
